# homeassistant-opendtu

./: .devcontainer.json  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  validate.yml
config/: configuration.yaml
custom_components/opendtu/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  naming.py  sensor.py
custom_components/opendtu/translations/: en.json
docs/: architecture.md  configuration.md  development.md  index.md  installation.md
docs/reference/: api.md  binary_sensor.md  config_flow.md  const.md  coordinator.md  data.md  entity.md  naming.md  package.md  sensor.md
scripts/: check  develop  docs  lint  package  security  setup  test  validate_hacs.py
tests/: conftest.py  test_api.py  test_entities.py  test_packaging.py
