[project]
name = "homeassistant-opendtu"
version = "0.1.0"
description = "Home Assistant custom integration for local OpenDTU devices."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant==2026.3.2",
]

[dependency-groups]
dev = [
    "ruff==0.15.7",
    "ty>=0.0.1a1",
]

[tool.uv]
package = false
