[project]
name = "homeassistant-opendtu"
version = "0.1.0"
description = "Home Assistant custom integration for local OpenDTU devices."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant==2026.3.2",
]

[dependency-groups]
dev = [
    "aioresponses==0.7.8",
    "bandit==1.9.2",
    "pip-audit==2.10.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.7",
    "ty>=0.0.1a1",
    "yamllint==1.37.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=custom_components/opendtu",
    "--cov-report=term-missing",
    "--cov-fail-under=50",
]

[tool.coverage.run]
branch = true
source = ["custom_components/opendtu"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["INP001", "PERF401", "T201"]
"tests/*.py" = ["INP001", "PLR2004", "S101"]
"tests/**/*.py" = ["INP001", "PLR2004", "S101"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25
